Update static resume for May 2019

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -1,7 +1,5 @@
 \documentclass[]{deedy-resume-openfont}
 
-\usepackage{tabulary}
-
 \begin{document}
 
 \hyphenation{knowledge working edinburgh technology experience}
@@ -14,7 +12,7 @@
 \namesection{Leon}{Overweel}{
     \urlstyle{same}\url{leonoverweel.com} \ | \
     \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} \ | \
-    +31 6 1215 9303
+    \href{tel:+31612159303}{+31 6 1215 9303}
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -33,8 +31,8 @@
 \descript{MSc Artificial Intelligence}
 \location{Sep. 2018 - Aug. 2019 | Edinburgh, UK}
 
-\vspace{0.2\topsep}
-Coursework: \begin{small}(Semester 1 completed)
+\vspace{0.4\topsep}
+Coursework: \begin{small}(Semesters 1 + 2 completed)
 \vspace{0.2\topsep}
 
 \custombold{Semester 1:}
@@ -53,14 +51,14 @@ Inf. Project Proposal \textbullet \
 ML Practical (cont.)
 \vspace{0.3\topsep}
 
-\custombold{Summer:}
-MSc Thesis: will research transfer learning for fraud prediction at \href{https://www.adyen.com/}{\custombold{Adyen}}.
+\custombold{Summer - MSc Thesis:}
+Researching transfer learning for fraud prediction at \href{https://www.adyen.com/}{\custombold{Adyen}}.
 
 \end{small}
 \vspace{\topsep}
 
 \subsection{Delft University of \newline Technology}
-\descript{BSc Computer Science and Engineering}
+\descript{BSc Computer Science and Eng.}
 \location{2015 - 2018 | Delft, NL}
 \vspace{\topsep}
 \begin{tightemize}
@@ -157,7 +155,7 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \begin{tightemize}
     \item Worked in a four-student team to create Mapp, an internal tool for customer journey mapping at \href{https://www.ing.com/}{\custombold{ING}}, as our BSc graduation project.
     \item Focused on finding product-market fit by shipping the Java + Polymer web app in two-week sprints and getting user feedback constantly.
-    \item Users love Mapp and ING is currently trialing its company-wide deployment.
+    \item Users love Mapp and ING is deploying it throughout the company.
 \end{tightemize}
 \vspace{0.5\topsep}
 
@@ -179,7 +177,7 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
     \item Organized \href{https://2017.hackdelft.nl/}{\custombold{HackDelft}} '17, the first edition of TU Delft's annual hackathon.
     \item Resp's: HackDelft’s jury and keynote speaker, @HackDelft twitter account, working with Major League Hacking, and general ``hacker experience.''
 \end{tightemize}
-\vspace{0.5\topsep}
+\vspace{0.3\topsep}
 
 %\runsubsection{Mugsy}
 %\descript{| Software Engineering Intern }
@@ -192,48 +190,95 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 %     PROJECTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Personal Projects}
+\section{Projects}
 
-All project titles link to more info! More previous projects here: \href{http://leonoverweel.com/}{\custombold{leonoverweel.com}}
+\href{https://dynamicallytyped.com}{\custombold{Dynamically Typed}} (2019): Bi-weekly email newsletter on productized artificial intelligence and machine learning research, with 80+ subscribers.
 
-\begin{tightemize}
-    \item \href{https://www.getrevue.co/profile/dynamically-typed}{\custombold{Dynamically Typed}} (2019): Bi-weekly newsletter on AI products and ML tech.
-    \item \href{https://weekly.cool}{\custombold{Weekly.Cool}} (2019): Subscription service for weekly email digests for reddit communities (subreddits); successfully launched and acquired paying users.
-    \item \href{http://keihardroeien.nl/}{\custombold{Keihard voor Kika}} (2018): Formed a crew with three friends, learned to row, and rowed a 100km race in June, raising money for child cancer research.
-    \item \href{http://hackathonlist.nl/}{\custombold{Hackathonlist.nl}} (2017): Crowd-sourced list of Dutch hackathons.
-    \item \href{http://leonoverweel.com/world-port-hackathon-2016}{\custombold{PassPort}} (2016): Blockchain app to detect container smuggling; 1st-place at World Port Hackathon; presented at several blockchain conferences; extended into 10-week project at TU Delft; paper published in EUSSET.
-    \item \href{http://leonoverweel.com/intersect.ninja}{\custombold{Intersect.Ninja}} (2015): Find intersections in the artists and songs different people like, based on their public Spotify playlists.
-    \item \href{http://leonoverweel.com/link-syncer}{\custombold{Link Syncer}} (2015): Shareable links that redirect once everyone has clicked. 
-\end{tightemize}
+\vspace{0.3\topsep}
+\href{https://weekly.cool}{\custombold{Weekly.Cool}} (2019): Subscription service for weekly email digests for subreddits.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     AWARDS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{0.3\topsep}
+\href{https://leonoverweel.com/projects/2019/rl-coursework/}{\custombold{Reinforcement Learning Soccer Bots}} (2019): Implemented and tuned eight different RL algorithms, including deep Q-learning, in a simple soccer game environment.
 
-\section{Awards} 
-\begin{tabular}{lll}
-2017, 18 (NL)   & T500: Most Talented Under-25s in Digital  & The Next Web\\
-2015 (NL)   & 1st Place: The Overall Best WPH Idea      & World Port Hackathon\\
-2015 (CA)   & 3rd Place: Google API Prize               & Hack the North\\
-2015 (US)   & National AP Scholar Award                 & The College Board\\
-2014 (US)   & University of Pennsylvania Book Award     & Rye High School\\
-\end{tabular}
-\vspace{0.1\topsep}
+\vspace{0.3\topsep}
+\href{https://leonoverweel.com/projects/2019/mlp-textworld-lstm-dqn/}{\custombold{Reinforcement Learning for Text-Based Games}} (2019): Experimented with techniques to encourage exploration for an RL agent trained to play text-based games.
+
+\vspace{0.3\topsep}
+\href{https://leonoverweel.com/projects/2019/nlu-coursework/}{\custombold{Neural Machine Translation with Lexical Model}} (2018): Analyzed a neural machine translation architecture, and implemented and evaluated a lexical model on top of it.
+
+\vspace{0.3\topsep}
+\href{https://leonoverweel.com/projects/2018/mlp-1-emnist-learning-and-regularization/}{\custombold{Convolutional Neural Networks Exploration (part 1}}, \href{https://leonoverweel.com/projects/2018/mlp-2-emnist-architectures/}{\custombold{part 2)}} (2018): Implemented different components and training schemes of CNNs and experimented with them on the EMNIST handwritten character recognition task.
+
+\vspace{0.3\topsep}
+\href{http://keihardroeien.nl/}{\custombold{Keihard voor Kika}} (2018): Formed a crew with three friends, learned to row, and rowed a 100km race in June, raising money for child cancer research.
+
+\vspace{0.2cm}
+You can see 30+ past projects on \href{http://leonoverweel.com/}{\custombold{leonoverweel.com},} ranging from websites and machine learning projects to videos and hackathons.
+
+\vspace{0.3\topsep}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Technical Skills}
-\vspace{-\topsep}
-\settowidth\tymin{\custombold{Some experience}}
-\begin{tabulary}{\linewidth}{LLL}
-    & \custombold{Languages} & \custombold{Platforms + Tools} \\
-    \hline
-    \custombold{Working knowledge} & Python, Java, JavaScript, SQL & Numpy, scikit-learn, Compute Engine, App Engine, serverless, Flask, Polymer, OpenAPI, Linux, Docker, Git, GitHub, IntelliJ, PyCharm \\
-    \hline
-    \custombold{Some experience} & C++, Matlab, Assembly, Prolog & nginx, Java Spark, RobotOS, Mindstorms NXT, Visual Studio
-\end{tabulary} 
+
+Each skill links to projects for which I've used it; ordered by number of projects.
+
+\vspace{0.3\topsep}
+\custombold{Programming Languages:} 
+\href{https://leonoverweel.com/tags/language-python/}{\custombold{Python}} \textbullet \
+\href{https://leonoverweel.com/tags/language-css/}{\custombold{CSS}} \textbullet \
+\href{https://leonoverweel.com/tags/language-html/}{\custombold{HTML}} \textbullet \
+\href{https://leonoverweel.com/tags/language-javascript/}{\custombold{JavaScript}} \textbullet \
+\href{https://leonoverweel.com/tags/language-c++/}{\custombold{C++}} \textbullet \
+\href{https://leonoverweel.com/tags/language-java/}{\custombold{Java}}
+
+\vspace{0.3\topsep}
+\custombold{Technical Tools:}
+\href{https://leonoverweel.com/tags/tool-git/}{\custombold{Git}} \textbullet \
+\href{https://leonoverweel.com/tags/tool-github/}{\custombold{GitHub}} \textbullet \
+\href{https://leonoverweel.com/tags/tool-google-app-engine/}{\custombold{Google App Engine}} \textbullet \
+\href{https://leonoverweel.com/tags/tool-flask/}{\custombold{Flask}} \textbullet \
+\href{https://leonoverweel.com/tags/tool-github-pages/}{\custombold{GitHub Pages}}
+
+\vspace{0.3\topsep}
+\custombold{ML Packages:}
+\href{https://leonoverweel.com/tags/ml-numpy/}{\custombold{NumPy}} \textbullet \
+\href{https://leonoverweel.com/tags/ml-matplotlib/}{\custombold{Matplotlib}} \textbullet \
+\href{https://leonoverweel.com/tags/ml-pytorch/}{\custombold{PyTorch}} \textbullet \
+\href{https://leonoverweel.com/tags/ml-plotly/}{\custombold{Plotly}} \textbullet \
+\href{https://leonoverweel.com/tags/ml-scipy/}{\custombold{SciPy}}
+
+\vspace{0.3\topsep}
+\custombold{ML Models:}
+\href{https://leonoverweel.com/tags/model-convolutional-neural-network/}{\custombold{Conv. Network}} \textbullet \
+\href{https://leonoverweel.com/tags/model-deep-q-network/}{\custombold{Deep Q Network}} \textbullet \
+\href{https://leonoverweel.com/tags/model-long-short-term-memory/}{\custombold{Long Short Term Memory}}
+\vspace{0.3\topsep}
+
+% \vspace{-\topsep}
+% \settowidth\tymin{\custombold{Some experience}}
+% \begin{tabulary}{\linewidth}{LLL}
+%     & \custombold{Languages} & \custombold{Platforms + Tools} \\
+%     \hline
+%     \custombold{Working knowledge} & Python, Java, JavaScript, SQL & Numpy, scikit-learn, Compute Engine, App Engine, serverless, Flask, Polymer, OpenAPI, Linux, Docker, Git, GitHub, IntelliJ, PyCharm \\
+%     \hline
+%     \custombold{Some experience} & C++, Matlab, Assembly, Prolog & nginx, Java Spark, RobotOS, Mindstorms NXT, Visual Studio
+% \end{tabulary} 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     AWARDS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Awards} 
+\hspace{-0.3cm}
+\begin{tabular}{lll}
+2017 - 19 (NL)   & T500: Most Talented Under-26s  & The Next Web\\
+2015 (NL)   & 1st Place: The Overall Best WPH Idea      & World Port Hackathon\\
+2015 (CA)   & 3rd Place: Google API Prize               & Hack the North\\
+\end{tabular}
+\vspace{0.1\topsep}
 
 \end{minipage} 
 \end{document}
