Add Adyen to single-page intern

--- a/single-page/source/resume.tex
+++ b/single-page/source/resume.tex
@@ -10,7 +10,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \namesection{Leon}{Overweel}{
-    \urlstyle{same}\url{leonoverweel.com} \ | \
+    \href{https://leonoverweel.com}{leonoverweel.com} \ | \
     \href{mailto:l.overweel@gmail.com}{l.overweel@gmail.com} \ | \
     \href{tel:+31612159303}{+31 6 1215 9303}
 }
@@ -148,10 +148,19 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 
 \section{Industry and Research Experience}
 
-\runsubsection{ING Bank}
-\descript{| Software Engineering Intern }
-\location{April 2018 – July 2018 | Amsterdam, NL}
+\runsubsection{Adyen}
+\descript{| MSc Thesis Intern (Machine Learning) }
+\location{May 2019 – August 2019 | Amsterdam, NL}
 \vspace{\topsep}
+\begin{tightemize}
+    \item Interning at \href{https://adyen.com}{Adyen} for my MSc thesis, doing a research project on using transfer learning to reuse credit card fraud prediction models between large and small merchants on their payments platform.
+\end{tightemize}
+\vspace{0.5\topsep}
+
+\runsubsection{ING Bank}
+\descript{| BSc Thesis Intern (Software Engineering) }
+\location{April 2018 – July 2018 | Amsterdam, NL}
+%\vspace{\topsep}
 \begin{tightemize}
     \item Worked in a four-student team to create Mapp, an internal tool for customer journey mapping at \href{https://www.ing.com/}{\custombold{ING}}, as our BSc graduation project.
     \item Focused on finding product-market fit by shipping the Java + Polymer web app in two-week sprints and getting user feedback constantly.
@@ -166,18 +175,9 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
     \item Worked in the \href{https://atlarge-research.com/}{\custombold{@Large Research}} group to build \href{https://opendc.org}{\custombold{OpenDC}}: a free, open-source datacenter simulator for research and university-level education.
     \item Leadership resp's: sprint planning, conference talks, and teaching classes.
     \item Engineering resp's: database + API design and Python web server development.
-    \item Post-Product Lead, I ran a nine-month study of cloud provider availability.
+    % \item Post-Product Lead, I ran a nine-month study of cloud provider availability.
 \end{tightemize}
 \vspace{0.5\topsep}
-
-\runsubsection{HackDelft}
-\descript{| Co-Founder, Chief Hacker Experience }
-\location{August 2016 – June 2017 | Delft, NL}
-\begin{tightemize}
-    \item Organized \href{https://2017.hackdelft.nl/}{\custombold{HackDelft}} '17, the first edition of TU Delft's annual hackathon.
-    \item Resp's: HackDelft’s jury and keynote speaker, @HackDelft twitter account, working with Major League Hacking, and general ``hacker experience.''
-\end{tightemize}
-\vspace{0.3\topsep}
 
 %\runsubsection{Mugsy}
 %\descript{| Software Engineering Intern }
@@ -210,7 +210,10 @@ Full CV: \href{https://leonoverweel.github.io/resume/}{\custombold{leonoverweel.
 \href{https://leonoverweel.com/projects/2018/mlp-1-emnist-learning-and-regularization/}{\custombold{Convolutional Neural Networks Exploration (part 1}}, \href{https://leonoverweel.com/projects/2018/mlp-2-emnist-architectures/}{\custombold{part 2)}} (2018): Implemented different components and training schemes of CNNs and experimented with them on the EMNIST handwritten character recognition task.
 
 \vspace{0.3\topsep}
-\href{http://keihardroeien.nl/}{\custombold{Keihard voor Kika}} (2018): Formed a crew with three friends, learned to row, and rowed a 100km race in June, raising money for child cancer research.
+\href{https://leonoverweel.com/projects/2018/ringvaart/}{\custombold{Keihard voor Kika}} (2018): Formed a crew with three friends, learned to row, and rowed a 100km race in June, raising money for child cancer research.
+
+\vspace{0.3\topsep}
+\href{https://leonoverweel.com/projects/2017/hackdelft/}{\custombold{HackDelft}} (2017): Co-founded and organized HackDelft '17, TU Delft's hackathon.
 
 \vspace{0.2cm}
 You can see 30+ past projects on \href{http://leonoverweel.com/}{\custombold{leonoverweel.com},} ranging from websites and machine learning projects to videos and hackathons.
